objects/Account.object
<CustomObject>
    <fields>
        <fullName>Billing_Address__c</fullName>
        <formula>BillingStreet &amp; &apos; &apos; &amp; BillingCity &amp; &apos;, &apos; &amp; BillingState &amp; &apos; &apos; &amp; BillingPostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Mailing_Address_Same_as_Physica__c</fullName>
        <inlineHelpText>Is your Business Mailing/Shipping Address the same as your Business Physical Address?</inlineHelpText>
        <label>Mailing Address Same as Physical Address</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Integration_Source__c</fullName>
        <description>Custom field to designate source Credit Union of object.</description>
        <label>Integration Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_this_a_Test__c</fullName>
        <inlineHelpText>Please denote if this is a Test Record.</inlineHelpText>
        <label>Is this a Test?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Migration_ID__c</fullName>
        <description>Custom field utilized in the Cuso Sync by nCino Data.</description>
        <externalId>true</externalId>
        <label>Migration ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Secured_Exposure__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Total Secured Exposure</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>cm_Email_Address__c</fullName>
        <label>Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>cm_Industry_Code_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the Industry Code custom object.</description>
        <label>Industry Code</label>
        <referenceTo>cm_Industry_Code__c</referenceTo>
        <relationshipLabel>Relationships</relationshipLabel>
        <relationshipName>Relationships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cm_Industry_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Industry Code</label>
        <referenceTo>cm_Industry_Code__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cm_Primary_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Relationships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cm_Third_Party_Type_Text__c</fullName>
        <description>Used to convert the third party type (multi-select picklist) to text which then is concatenated with the Vendor name via a Process Builder. Add &quot;IF ( INCLUDES ( LLC_BI__Third_Party__c , &quot;[INSERT FI VENDOR TYPE]&quot; ), &quot;[INSERT FI VENDOR TYPE]&quot;,null ) &amp;&quot; at the end of the formula field if new picklist values are needed.</description>
        <formula>IF ( INCLUDES ( LLC_BI__Third_Party__c , &quot;Appraiser&quot; ), &quot;Appraiser &quot;,null ) &amp;
IF ( INCLUDES ( LLC_BI__Third_Party__c , &quot;Attorney&quot; ), &quot;Attorney &quot;,null ) &amp;
IF ( INCLUDES ( LLC_BI__Third_Party__c , &quot;Demolition&quot; ), &quot;Demolition &quot;,null ) &amp;
IF ( INCLUDES ( LLC_BI__Third_Party__c , &quot;Demolition Contact&quot; ), &quot;Demolition Contact &quot;,null ) &amp;
IF ( INCLUDES ( LLC_BI__Third_Party__c , &quot;Inactive&quot; ), &quot;Inactive &quot;,null ) &amp;
IF ( INCLUDES ( LLC_BI__Third_Party__c , &quot;Inspector&quot; ), &quot;Inspector &quot;,null ) &amp;
IF ( INCLUDES ( LLC_BI__Third_Party__c , &quot;Insurance Agency&quot; ), &quot;Insurance Agency &quot;,null ) &amp;
IF ( INCLUDES ( LLC_BI__Third_Party__c , &quot;Mortgage Broker&quot; ), &quot;Mortgage Broker &quot;,null ) &amp;
IF ( INCLUDES ( LLC_BI__Third_Party__c , &quot;Mortgage Broker Contact&quot; ), &quot;Mortgage Broker Contact &quot;,null ) &amp;
IF ( INCLUDES ( LLC_BI__Third_Party__c , &quot;Real Estate Broker Buyer&quot; ), &quot;Real Estate Broker Buyer &quot;,null ) &amp;
IF ( INCLUDES ( LLC_BI__Third_Party__c , &quot;Real Estate Broker Buyer Contact&quot; ), &quot;Real Estate Broker Buyer Contact &quot;,null ) &amp;
IF ( INCLUDES ( LLC_BI__Third_Party__c , &quot;Real Estate Broker Seller&quot; ), &quot;Real Estate Broker Seller &quot;,null ) &amp;
IF ( INCLUDES ( LLC_BI__Third_Party__c , &quot;Real Estate Broker Seller Contact&quot; ), &quot;Real Estate Broker Seller Contact &quot;,null ) &amp;
IF ( INCLUDES ( LLC_BI__Third_Party__c , &quot;Settlement/Title Agent&quot; ), &quot;Settlement/Title Agent &quot;,null ) &amp;
IF ( INCLUDES ( LLC_BI__Third_Party__c , &quot;Settlement/Title Agent Contact&quot; ), &quot;Settlement/Title Agent Contact &quot;,null ) &amp;
IF ( INCLUDES ( LLC_BI__Third_Party__c , &quot;Survey&quot; ), &quot;Survey &quot;,null ) &amp;
IF ( INCLUDES ( LLC_BI__Third_Party__c , &quot;Survey Contact&quot; ), &quot;Survey Contact &quot;,null ) &amp;
IF ( INCLUDES ( LLC_BI__Third_Party__c , &quot;Third Party Reports&quot; ), &quot;Third Party Reports &quot;,null )</formula>
        <label>Third Party Type Text</label>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.URL</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Relationships</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <recordTypes>
        <fullName>LLC_BI__Business</fullName>
        <active>true</active>
        <description>Select &quot;Business&quot; to add a Corporation, Partnership, or other business relationship type.</description>
        <label>Business</label>
    </recordTypes>
    <recordTypes>
        <fullName>LLC_BI__Household</fullName>
        <active>true</active>
        <description>Select &quot;Household&quot; if you&apos;re adding a Household relationship type.</description>
        <label>Household</label>
    </recordTypes>
    <recordTypes>
        <fullName>LLC_BI__Individual</fullName>
        <active>true</active>
        <description>Select &quot;Individual&quot; to add an Individual relationship type.</description>
        <label>Individual</label>
    </recordTypes>
    <recordTypes>
        <fullName>LLC_BI__Lender</fullName>
        <active>true</active>
        <description>Select &quot;Lender&quot; if you are adding a Financial Institution or Institutional Investor relationship type.</description>
        <label>Lender</label>
    </recordTypes>
    <recordTypes>
        <fullName>Vendor</fullName>
        <active>true</active>
        <description>Select &quot;Vendor&quot; if you are adding an attorney, appraiser, or other third party.</description>
        <label>Vendor</label>
    </recordTypes>
</CustomObject>